<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorappbackground"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:padding="@dimen/button_secondary_width"
            android:scaleType="centerInside"
            android:src="@drawable/logo"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/static_title_height"
                android:padding="@dimen/default_padding"
                android:scaleType="centerInside"
                android:src="@drawable/title"
                />

            <LinearLayout
                android:id="@+id/about_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_app_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:gravity="center"
                    android:text="@string/info_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:gravity="center"
                    android:text="@string/info_desc1"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:gravity="center"
                    android:text="@string/info_desc3"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_credit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/credit_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/about_tester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:gravity="center"
                    android:text="@string/credit_tester"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/about_anim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/credit_animation_layouts"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/pastelyellow4"/>

                <TextView
                    android:id="@+id/about_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/credit_sound_fx"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/pastelyellow4"/>

                <TextView
                    android:id="@+id/about_artworks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/credit_artworks"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/pastelyellow4"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/about_help_layout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/contact_title"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/contact_list"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="email"
                android:gravity="center"
                android:text="@string/contact_email"
                android:textColor="@color/colorWhite"
                android:textColorLink="@color/pastelyellow4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/contact_facebook"
                android:textColor="@color/colorWhite"
                android:textColorLink="@color/pastelyellow4"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/about_contrib_layout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/contribute_title"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/contribute_line_one"
                android:textColor="@color/colorWhite"
                android:textColorLink="@color/pastelyellow4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/contribute_line_two"
                android:textColor="@color/colorWhite"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
