<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorappbackground"
    tools:context="com.alza.android.quiz.activity.SplashScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/quiz_direction_title"
             android:textStyle="bold"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/caption_font_size"/>
        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/quiz_direction_one"/>
        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/quiz_direction_two"/>
        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/quiz_direction_three"/>
        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/quiz_direction_four"/>
        <TextView
            android:id="@+id/directiontimerquiz"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/quiz_splash_countdown"
            android:textStyle="bold"
            android:gravity="center"
            android:text="5"/>
        <Button
            android:id="@+id/directionstartquiz"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/quiz_direction_button_start"
            android:background="@color/colorappbackground"
            />
    </LinearLayout>





</android.support.design.widget.CoordinatorLayout>
