<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorappbackground"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:padding="@dimen/button_secondary_width"
            android:scaleType="centerInside"
            android:src="@drawable/logo"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/static_title_height"
                android:scaleType="centerInside"
                android:src="@drawable/title"
                android:id="@+id/help_title"
                />

            <LinearLayout
                android:id="@+id/help_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="@string/contact_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/contact_list"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="email"
                    android:gravity="center"
                    android:text="@string/contact_email"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/pastelyellow4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/contact_facebook"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/pastelyellow4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/contact_twitter"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/help_contribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:padding="@dimen/default_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/contribute_title"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    />

                <TextView
                    android:padding="@dimen/default_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/contribute_line_one"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/pastelyellow4"/>

                <TextView
                    android:padding="@dimen/default_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/contribute_line_two"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
